--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,30 +1,41 @@
-name: MLOPs with Databricks
+name: CD
 
 on:
-  push:
-    branches:
-      - 'main'
+  workflow_dispatch:
 
-env:
-  DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+  # push:
+  #   branches:
+  #     - 'main'
 
 jobs:
-  deploy_to_acc_and_prd:
-    name: Set Up Environment
+  try_auth:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         environment: [acc, prd]
-
     environment: ${{ matrix.environment }}
-
+    permissions:
+      id-token: write
+      contents: read
+    env:
+      DATABRICKS_HOST: ${{ vars.DATABRICKS_HOST }}
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722 #v4.1.0
         with:
-          fetch-depth: 0
-          ref: ${{ github.head_ref }}
+          role-to-assume: ${{ vars.ARN_ROLE }}
+          aws-region: eu-west-1
+
+      - name: Fetch secrets
+        uses: aws-actions/aws-secretsmanager-get-secrets@5e19ff380d035695bdd56bbad320ca535c9063f2 #v2.0.9
+        # will parse secret called DATABRICKS_CLIENT_ID and DATABRICKS_CLIENT_SECRET
+        with:
+          secret-ids: |
+            , ${{ vars.SECRET_ID }}
+          parse-json-secrets: true
 
       - name: Install Databricks CLI
         uses: databricks/setup-cli@49580195afe1ccb06d195764a1d0ae9fabfe2edd #v0.246.0
@@ -34,18 +45,13 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 #v5.4.1
 
-      - name: Install the dependencies
-        run: |
-          uv sync --all-extras
-
       - name: Deploy to Databricks
         env:
           DATABRICKS_BUNDLE_ENV: ${{ matrix.environment }}
         run: |
             if [ "${{ matrix.environment }}" = "prd" ]; then
-            echo "VERSION=$(cat version.txt)" > version.txt
+            echo "VERSION=$(cat version.txt)"
             git tag $VERSION
             git push origin $VERSION
             fi
             databricks bundle deploy --var="git_sha=${{ github.sha }}"
-            
