--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,17 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
 
+      - name: Git tag from version.txt
+        run: |
+          echo "VERSION=$(cat version.txt)" 
+          git tag $VERSION 
+
       - name: Install uv
         uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 #v5.4.1
 
       - name: Install the dependencies
         run: |
-          uv sync --all-extras
+          uv sync --extra ci
 
       - name: Run pre-commit checks
         run: |
@@ -30,8 +35,5 @@ jobs:
         run: |
           uv run pytest 
 
-      - name: Git tag from version.txt
-        run: |
-          echo "VERSION=$(cat version.txt)" 
-          git tag $VERSION 
+
       
