--- a/project_config.yml
+++ b/project_config.yml
@@ -1,14 +1,14 @@
 dev:
   catalog_name: mlops_dev
-  schema_name: hotel_cancellation
+  schema_name: hotel_booking
 
 acc:
   catalog_name: mlops_acc
-  schema_name: hotel_cancellation
+  schema_name: hotel_booking
 
 prd:
   catalog_name: mlops_prd
-  schema_name: hotel_cancellation
+  schema_name: hotel_booking
 
 parameters:
   learning_rate: 0.02
