--- a/databricks.yml
+++ b/databricks.yml
@@ -41,16 +41,16 @@ targets:
     default: true
     mode: development
     workspace:
-      host: https://dbc-c2e8445d-159d.cloud.databricks.com
+      host: https://dbc-63712503-50ce.cloud.databricks.com
       root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
 
   acc:
     workspace:
-      host: https://dbc-c2e8445d-159d.cloud.databricks.com
+      host: https://dbc-63712503-50ce.cloud.databricks.com
       root_path: /Shared/.bundle/${bundle.target}/${bundle.name}
 
   prd:
     workspace:
-      host: https://dbc-c2e8445d-159d.cloud.databricks.com
+      host: https://dbc-63712503-50ce.cloud.databricks.com
       root_path: /Shared/.bundle/${bundle.target}/${bundle.name}
 
