--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-dotenv==1.1.1",
     "ray[tune]==2.47.1",
     "optuna>=4.4.0",
+    "sdv>=1.24.0",
 ]
 
 [project.optional-dependencies]
