--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ dependencies = [
     "numpy==1.26.4",
     "pandas==2.3.0",
     "pyarrow==17.0.0",
-    "databricks-feature-engineering==0.13.0a1",
+    "databricks-feature-engineering==0.13.0",
+    "databricks-feature-lookup==1.8.0",
     "scikit-learn==1.7.0",
     "lightgbm==4.6.0",
     "scipy==1.16.0",
-    "databricks-sdk==0.55.0",
+    "databricks-sdk==0.62.0",
     "pydantic==2.11.7",
     "loguru==0.7.3",
     "python-dotenv==1.1.1",
