--- a/resources/ml_monitoring.yml
+++ b/resources/ml_monitoring.yml
@@ -14,8 +14,8 @@ resources:
           new_cluster:
             spark_version: "16.4.x-scala2.12"
             data_security_mode: "SINGLE_USER"
-            node_type_id: "r3.xlarge"
-            driver_node_type_id: "r3.xlarge"
+            node_type_id: "Standard_DS3_v2" #"r3.xlarge"
+            driver_node_type_id: "Standard_DS3_v2" #"r3.xlarge"
             autoscale:
               min_workers: 1
               max_workers: 1
@@ -26,10 +26,10 @@ resources:
           spark_python_task:
             python_file: "../scripts/refresh_monitor.py"
             parameters:
-              - "--common"
+              - "common"
               - "--root_path"
               - ${workspace.root_path}
               - "--env"
               - ${bundle.target}
           libraries:
-           - whl: ./dist/*.whl
+           - whl: ../dist/*.whl
