--- a/resources/ml_monitoring.yml
+++ b/resources/ml_monitoring.yml
@@ -12,13 +12,11 @@ resources:
       job_clusters:
         - job_cluster_key: "hotel-booking-cluster"
           new_cluster:
-            spark_version: "16.4.x-scala2.12"
+            spark_version: "17.3.x-scala2.12"
             data_security_mode: "SINGLE_USER"
             node_type_id: "Standard_DS3_v2" #"r3.xlarge"
             driver_node_type_id: "Standard_DS3_v2" #"r3.xlarge"
-            autoscale:
-              min_workers: 1
-              max_workers: 1
+            num_workers: 1
 
       tasks:
         - task_key: "refresh_monitor_table"
